# memory-graph

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  memory.jsonl  memory.jsonl.backup  memory.rs
.github/: copilot-instructions.md
.github/agents/: Agent.agent.md  Brain-Storming.agent.md
.github/workflows/: release.yml  rust.yml
.tools/: import_invoices.py  project_structure.md
.tools/project/: summary_source_code.py
data/sample/: README.md  aml-sample-data.json  aml-sample-data.jsonl  daily-standup.jsonl  fta-nuclear-loca.jsonl  ha-fault-tolerance.jsonl  meeting-notes.jsonl  release-planning.jsonl  risk-register.jsonl  sprint-planning.jsonl  timesheet.jsonl
docs/: AI-Agent-Workflow.md  GNN-Integration.md  IDEA.md  Proposed-Graph-Inference.md  Proposed-RwLock.md  README.md
docs/git/: GIT-BRANCHING-GUIDE.md
docs/knowledge/: Event-Sourcing-Architecture.md
docs/proposal/: Proposed-Event-Sourcing.md  Proposed-Graph-Inference.md  Proposed-GraphQL-API.md  Proposed-MCP-Tools.md  Proposed-Multi-Process-Gateway.md  Proposed-RwLock.md  Proposed-Team-Collaboration.md  Proposed-WebSocket-UI.md
docs/research/: Scaling-Billion-Nodes.md
docs/review/: Review_project_2026-01-11.md  Review_project_2026-01-12.md  Usage_2026-01-12.md
docs/use-cases/: AML-Transaction-Monitoring.md  Fault-Tree-Analysis.md  HA-Fault-Tolerance.md  README.md
src/: lib.rs  main.rs
src/api/: http.rs  mod.rs
src/api/rest/: entities.rs  graph.rs  mod.rs  relations.rs  search.rs
src/api/sse/: auth.rs  handler.rs  mod.rs  session.rs
src/api/websocket/: batcher.rs  broadcaster.rs  events.rs  handler.rs  mod.rs  state.rs
src/event_store/: migration.rs  mod.rs  rotation.rs  snapshot.rs  stats.rs  store.rs
src/knowledge_base/: crud.rs  mod.rs  query.rs  summarize.rs  temporal.rs  traversal.rs
src/protocol/: jsonrpc.rs  mcp.rs  mod.rs
src/search/: index.rs  mod.rs  synonyms.rs
src/server/: handlers.rs  mod.rs
src/tools/: mod.rs
src/types/: entity.rs  event.rs  graph.rs  inference.rs  mod.rs  observation.rs  relation.rs  summary.rs  traversal.rs
src/utils/: atomic.rs  mod.rs  time.rs
src/validation/: mod.rs  types.rs
tests/: event_sourcing_tests.rs  integration_tests.rs
ui/: index.html
ui/css/: styles.css
ui/js/: app.js  editor.js  graph.js  inference.js  websocket.js
(+22 files in other folders)
