[package]
name = "memory-server"
version = "1.0.0"
edition = "2021"
authors = ["Memory Graph MCP Server"]
description = "A knowledge graph MCP server implementing the Model Context Protocol"
license = "MIT"

[[bin]]
name = "memory-server"
path = "memory.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
