[package]
name = "memory-graph"
version = "1.2.0"
edition = "2021"
authors = ["Memory Graph MCP Server"]
description = "A knowledge graph MCP server implementing the Model Context Protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/maithanhduyan/memory-graph"
keywords = ["mcp", "knowledge-graph", "ai", "memory", "llm"]
categories = ["development-tools", "data-structures"]

[lib]
name = "memory_graph"
path = "src/lib.rs"

[[bin]]
name = "memory-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
