[package]
name = "memory-graph"
version = "1.3.0"
edition = "2021"
authors = ["Memory Graph MCP Server"]
description = "A knowledge graph MCP server implementing the Model Context Protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/maithanhduyan/memory-graph"
keywords = ["mcp", "knowledge-graph", "ai", "memory", "llm"]
categories = ["development-tools", "data-structures"]

[lib]
name = "memory_graph"
path = "src/lib.rs"

[[bin]]
name = "memory-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"  # Cross-platform Ctrl+C / SIGTERM handling

# WebSocket & HTTP API
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
urlencoding = "2.1"  # URL decode for path parameters

[dev-dependencies]
tempfile = "3"
tower = "0.5"  # For ServiceExt trait in tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
